--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clinto-cv-express.js-backend",
+  "name": "backend-clinto-personal-api",
   "version": "1.0.1",
   "private": true,
   "description": "RESTful API using Node.js, Express, AWS S3, MySQL, Sequelize migration, Joi validation, and middleware in API requests that allows users to upload and manage files.",
