--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "RESTful API using Node.js, Express, AWS S3, MySQL, Sequelize migration, Joi validation, and middleware in API requests that allows users to upload and manage files.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "server.js",
+    "dev": "nodemon server.js",
     "test": "jest",
     "up": "npx sequelize-cli db:migrate",
     "down": "npx sequelize-cli db:migrate:undo",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
     "@aws-sdk/s3-request-presigner": "^3.335.0",
+    "@prisma/client": "^4.16.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
@@ -44,20 +46,22 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.7.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.22",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.2",
-    "sequelize": "^6.31.1",
+    "sequelize": "^6.32.1",
     "sharp": "^0.32.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "babel-register": "^6.26.0",
     "jest": "^29.5.0",
+    "prisma": "^4.16.2",
     "puppeteer": "^20.5.0",
+    "nodemon": "^2.0.22",
     "sequelize-cli": "^6.6.0"
   }
 }
