--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "RESTful API using Node.js, Express, AWS S3, MySQL, Sequelize migration, Joi validation, and middleware in API requests that allows users to upload and manage files.",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "server.js",
+    "dev": "npx prisma generate && nodemon server.js",
     "test": "jest",
     "up": "npx sequelize-cli db:migrate",
     "down": "npx sequelize-cli db:migrate:undo",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.335.0",
     "@aws-sdk/s3-request-presigner": "^3.335.0",
+    "@prisma/client": "^5.0.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "~1.4.6",
     "cors": "^2.8.5",
@@ -57,6 +59,7 @@
   "devDependencies": {
     "babel-register": "^6.26.0",
     "jest": "^29.5.0",
+    "prisma": "^5.0.0",
     "puppeteer": "^20.5.0",
     "sequelize-cli": "^6.6.0"
   }
