--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: Node.js CI & CD
 
 on:
   push:
@@ -25,5 +25,8 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: sudo pm2 restart actions-backend
+    - run: |
+        touch .env
+        echo "${{ secrets.PROD_ENV }}" > .env
+#     - run: sudo pm2 restart actions-backend
     # - run: npm test
