--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,5 +28,5 @@ jobs:
     - run: |
         touch .env
         echo "${{ secrets.PROD_ENV }}" > .env
-#     - run: sudo pm2 restart actions-backend
+    - run: sudo pm2 restart BackendAPI
     # - run: npm test
