--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ lerna-debug.log*
 .pnpm-debug.log*
 .env
 .env.example.test
+package-lock.json
+text.ignore.txt
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
